--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .container {
   margin-top: 10px;
 }
@@ -10,4 +12,13 @@
 
 .purchase-card > .show-grid {
   padding-bottom: 1.5em;
+}
+
+.item-details-button:focus {
+  outline: none;
+}
+
+.price-strike {
+  text-decoration-line: line-through;
+  color: grey;
 }
